--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "-": "^0.0.1",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
+    "@elastic/elasticsearch": "^8.13.1",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "D": "^1.0.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
