--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @786Muhammadshams:registry=https://npm.pkg.github.com/786Muhammadshams
-//npm.pkg.github.com/:_authsToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
