--- a/.github/workflow/publish.yml
+++ b/.github/workflow/publish.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: '20.x'
       - run: npm install
       - run: npm run build
-      - run: echo @786Muhammadshams:registry=https://npm.pkg.github.com/ > build/.npmrc
+      - run: echo @786Muhammadshams:https://npm.pkg.github.com/ > build/.npmrc
       - run: echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
       - run: npm publish
         working-directory: ./build
