--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm install
+      - run: npm install --save-dev @babel/core @babel/cli @babel/preset-env
       - run: npm run build
       - run: echo @786Muhammadshams:https://npm.pkg.github.com/ > build/.npmrc
       - run: echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
