--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   "types": "./src/index.d.ts",
   "dependencies": {
     "-": "^0.0.1",
-    "@babel/preset-env": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
     "@elastic/elasticsearch": "^8.13.1",
     "@types/express": "^4.17.21",
@@ -50,6 +49,9 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
     "cross-env": "^7.0.3"
   }
 }
