github actions error fixed

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,8 @@ jobs:
       - run: npm install --save-dev @babel/core @babel/cli @babel/preset-env
       - run: npm run build
       - run: echo @786Muhammadshams:https://npm.pkg.github.com/ > build/.npmrc
-      - run: echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
+      - run: echo '//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}' >> build/.npmrc
       - run: npm publish
         working-directory: ./build
         env:
-          NPM_TOKEN: ${{ secrets.GITHUB.TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
