--- a/package.json
+++ b/package.json
@@ -39,21 +39,23 @@
   },
   "types": "./src/index.d.ts",
   "dependencies": {
-    "-": "^0.0.1",
-    "@babel/preset-typescript": "^7.24.6",
-    "@elastic/elasticsearch": "^8.13.1",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "D": "^1.0.0",
-    "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "@elastic/elasticsearch": "^8.11.0",
+    "amqplib": "^0.10.3",
+    "cloudinary": "^1.41.3",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "typescript": "^5.3.3",
+    "winston": "^3.11.0",
+    "winston-elasticsearch": "^0.17.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.7",
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@types/http-status-codes": "^1.2.0",
-    "@types/winston": "^2.4.4",
-    "cross-env": "^7.0.3"
+    "@babel/cli": "^7.23.4",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/amqplib": "^0.10.4",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
