types error fixed

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: '20.x'
       - run: npm install
       - run: npm install --save-dev @babel/core @babel/cli @babel/preset-env
+      - run: npm install cross-env
       - run: npm run build
       - run: echo @786Muhammadshams:https://npm.pkg.github.com/ > build/.npmrc
       - run: echo '//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}' >> build/.npmrc
